@@ -80,6 +80,7 @@ enum XmlErrorCodes
 	XML_ERROR_SYNTAX,
 	XML_ERROR_BAD_NESTING,
 
+	XML_ERROR_NO_ATTRIBS,
 	XML_ERROR_IMPLEMENTATION,
 };
 
